@@ -34,6 +34,54 @@ object ShellEnvironment {
         pb.environment()["PATH"] = augmentedPath
     }
 
+    /**
+     * Inject the augmented PATH into the JVM's own process-environment map so any subprocess
+     * spawned via `ProcessBuilder` — including those inside third-party libs we can't reach
+     * (notably fabric8's `KubeConfigUtils`, which shells out to `aws` / `gcloud` / `kubelogin`
+     * for kubeconfig `exec` credential plugins) — inherits a usable PATH.
+     *
+     * Without this, .app bundles launched from Finder/Dock get the minimal GUI PATH
+     * (`/usr/bin:/bin:/usr/sbin:/sbin`), the exec plugin returns "command not found", fabric8
+     * fails to obtain a bearer token, and every API call comes back 401 Unauthorized — even
+     * though the same kubeconfig works fine when the JVM is launched from a terminal.
+     *
+     * Requires `--add-opens java.base/java.lang=ALL-UNNAMED` on JDK 17+ (set in
+     * composeApp/build.gradle.kts).
+     */
+    fun installIntoJvmEnv() {
+        try {
+            val path = augmentedPath
+            val peClass = Class.forName("java.lang.ProcessEnvironment")
+            val envField = peClass.getDeclaredField("theEnvironment").apply { isAccessible = true }
+            val env = envField.get(null)
+
+            // Windows: theEnvironment is Map<String, String> and there's a sibling
+            // theCaseInsensitiveEnvironment that the launcher reads from. Unix/macOS:
+            // theEnvironment is Map<Variable, Value> with byte-array-backed wrapper types.
+            val ciField = runCatching { peClass.getDeclaredField("theCaseInsensitiveEnvironment") }.getOrNull()
+            if (ciField != null) {
+                @Suppress("UNCHECKED_CAST")
+                (env as MutableMap<String, String>)["PATH"] = path
+                ciField.isAccessible = true
+                @Suppress("UNCHECKED_CAST")
+                (ciField.get(null) as MutableMap<String, String>)["PATH"] = path
+            } else {
+                val varClass = Class.forName("java.lang.ProcessEnvironment\$Variable")
+                val valClass = Class.forName("java.lang.ProcessEnvironment\$Value")
+                val varOf = varClass.getDeclaredMethod("valueOf", String::class.java).apply { isAccessible = true }
+                val valOf = valClass.getDeclaredMethod("valueOf", String::class.java).apply { isAccessible = true }
+                @Suppress("UNCHECKED_CAST")
+                (env as MutableMap<Any, Any>)[varOf.invoke(null, "PATH")] = valOf.invoke(null, path)
+            }
+            log.info("Injected augmented PATH into JVM process env ({} chars)", path.length)
+        } catch (t: Throwable) {
+            log.warn(
+                "Could not inject PATH into JVM process env: {}. Exec credential plugins (aws/gcloud/kubelogin) may fail in packaged .app bundles.",
+                t.message,
+            )
+        }
+    }
+
     fun resolveCommand(command: String): String? {
         val cached = commandCache[command]
         if (cached != null) return cached.orElse(null)
